2016-03-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/rle.c (ReadRLEImage): Fix SourceForge bug #371
	"out-of-bounds read in coders/rle.c:633:39".

2016-03-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dib.c (ReadDIBImage): Fix SourceForge bug #367
	"out-of-bounds read in coders/dib.c:706:13" and bug #370
	"out-of-bounds read in coders/dib.c:716:15".

	* coders/pict.c (ReadPICTImage): Fix SourceForge bug #365
	"out-of-bounds read in magick/image.c:1305:3"

	* magick/utility.c (GetPageGeometry): Fix SourceForge bug #374
	"out-of-bounds write in magick/utility.c:4355:7"

2016-03-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (ReadMIFFImage): Fix SourceForge bug #376 "SIGABRT
	in magick/colorspace.c:1052".

	* magick/shear.c (RotateImage): Fix SourceForge bug #375 "SIGABRT
	in magick/image.c:1230".

	* coders/sun.c (DecodeImage): Fix SourceForge bug #368
	"out-of-bounds read in coders/sun.c:223:17" and bug #363
	"out-of-bounds read in coders/sun.c:221:16".

2016-03-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/svg.c (GetUserSpaceCoordinateValue): Fix stack buffer
	overflow when reading file 'aaphrbkwwe.svg.-632425326915265752'
	from CVE-2016-2317 problem files.  Partial fix for SourceForge bug
	#358 "CVE-2016-2317 - SVG heap/stack buffer overflows".

	* magick/utility.c (MagickGetToken): New private function to
	replace GetToken().  The new function accepts a token buffer
	length argument.  GetToken() is modified to assume a token buffer
	length 'MaxTextExtent'.  All code using GetToken() is updated to
	use MagickGetToken().

	* coders/svg.c: Fix heap buffer overflow when reading file
	"aaphrbkwwe.svg.4495884156523242589" from CVE-2016-2317 problem
	files.  Partial fix for SourceForge bug #358 "CVE-2016-2317 - SVG
	heap/stack buffer overflows".

2016-03-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/psd.c (ReadPSDImage): Fix SourceForge bug #341