@@ -38,6 +38,9 @@
 <p>2016-03-26  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/sgi.c (ReadSGIImage): Fix SourceForge bug #366
+&quot;out-of-bounds write in coders/sgi.c:528:4&quot; and bug #369
+&quot;out-of-bounds write in coders/sgi.c:535:4&quot;.</li>
 <li>coders/rle.c (ReadRLEImage): Fix SourceForge bug #371
 &quot;out-of-bounds read in coders/rle.c:633:39&quot;.</li>
 </ul>
